Review (or otherwise) fixes
Fix wording with implied multi-product votes
Fix exception with product_img
Fix confusing code with product back-filling
Remove reference to App v11
Fix list item markup (ul is outside loop)
Fix ask.html not working on cart page
Fix results page image dimensions
Fix email tag with mailto:
Remove senseless customization guide for SIBT
Fix SIBT-connection not showing on new buttons.js; setting height manually.
Remove old references to user_found
Correct user_found to boolean

--- a/static/wosib/css/wosib.css
+++ b/static/wosib/css/wosib.css
@@ -96,6 +96,7 @@
     clear: both;
     display: block;
     margin: 0 auto;
+    max-width: 200px;
     max-height: 196px;
     margin-bottom: 12px;
 }
